ipmgr (1.0.40.0~jammy) jammy; urgency=high

  * Fine tune error message.
  * Renamed a variable and use a more specific type.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 22 Nov 2023 20:32:52 -0800

ipmgr (1.0.39.0~jammy) jammy; urgency=high

  * Fixed serial number gathering so it works with new domain names.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 22 Nov 2023 18:52:09 -0800

ipmgr (1.0.38.0~jammy) jammy; urgency=high

  * Enhance documentation of dns-options.

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 19 Nov 2023 11:04:25 -0800

ipmgr (1.0.37.0~jammy) jammy; urgency=high

  * Fixed path to /etc/bind for zones README file.

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 19 Nov 2023 10:08:09 -0800

ipmgr (1.0.36.0~jammy) jammy; urgency=high

  * Fixed path to bind journals (/var/lib/bind/*.jnl, no "9").
  * Install the logo as expected.
  * Added test to check that the transfer happens.
  * Fixed the PTR file, although so far I never had a use for that file.
  * Updated compat to 15.

 -- Alexis Wilke <alexis@m2osw.com>  Mon, 02 Jan 2023 09:37:40 -0800

ipmgr (1.0.35.3~bionic) bionic; urgency=high

  * Bumped build version to rebuild on Launchpad.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 12 Nov 2022 17:50:46 -0800

ipmgr (1.0.35.2~bionic) bionic; urgency=high

  * Fixed up a man page.

 -- Alexis Wilke <alexis@m2osw.com>  Mon, 31 Oct 2022 14:32:52 -0700

ipmgr (1.0.35.1~bionic) bionic; urgency=high

  * Rebuild with newer libaddr version.

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 12 Jul 2022 20:11:31 -0700

ipmgr (1.0.35.0~bionic) bionic; urgency=high

  * Added trigger of interest path (i.e. `/usr/share/ipmgr/zones`).

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 02 Jul 2022 11:05:54 -0700

ipmgr (1.0.34.0~bionic) bionic; urgency=high

  * Added support to trigger a restart instead of restarting on each package.
  * Fixed the separator lists (nullptr required).
  * Fixed compat to v10.
  * Small clean ups.
